--- a/css/contact.css
+++ b/css/contact.css
@@ -87,44 +87,28 @@ textarea{
 }
 
 
-@media (min-width:769px) and (max-width:984px){
-    .heading--text{
-        width: 50%;
-    }
-}
 
-@media (min-width:650px) and (max-width:768px){
-    
-    .heading h2{
-        width: 40%;
-        font-size: 40px;
-        margin-right:5px ;
-        margin-left: 7em;
-    }
-    .send{
-        margin-left: 50%;
-    }
-    .emails{
-        margin-left: 5em;
-    }
-}
 
 
 /*for mobile phone with 320 px*/
-@media (min-width:305px) and (max-width:650px) {
+@media (min-width:290px) and (max-width:650px) {
+    
     .heading h2{
-       font-size: 30px;
-       width: 50%;
-       margin-left: 100px;
+        font-size: 30px;
+        width: 60%;
+        margin-left: 70px;
+    }
+    .name-input{
+        width: 100%;
     }
     
     .email{
-        color: red;
+        padding-right: 5vh;
         padding-left: 5%;
         font-size: 10px;
     }
     .name--describe{
-        font-size: 20px;
+        font-size: 17px;
     }
     .emails{
         margin-left: 1em;
@@ -140,6 +124,32 @@ textarea{
         
     }
     
-     
+     .suggest{
+         font-size: 19px;
+         padding: 10px;
+     }
 }
 
+
+@media (min-width:767px) and (max-width:984px){
+    .heading--text{
+        width: 50%;
+        font-size: 15px;
+    }
+}
+
+@media (min-width:650px) and (max-width:768px){
+    
+    .heading--text{
+        width: 40%;
+        font-size: 40px;
+        margin-right:5px ;
+        margin-left: 7em;
+    }
+    .send{
+        margin-left: 50%;
+    }
+    .emails{
+        margin-left: 5em;
+    }
+}
