--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -24,44 +24,41 @@
         font-size: 25px;
        
     }
-    h3.next-title {
+    .next-title {
         border: 2px solid rgb(54, 53, 53);
         padding: 15px 25px 15px 35px;
-    
         background-color: rgba(20, 24, 23, 0.227);
         border-radius: 155px;
         margin: 15px;
         font-size: 1.9em;
     }
-    .next a{
+    .next-link{
         text-decoration: none;
     }
-    .next a:visited{
+    .next-link:visited{
         color: #0fe5e5;
     }
-    .next a:hover{
+    .next-link:hover{
         color: rgb(255, 72, 0);
     }
 
 .photo{
-    margin-top: 2rem;
+    margin-top: 10px;
     padding: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 50px;
 }
-figure{
+.photo__figuree{
     grid-column: span 1;
-    
-    
 }
 
-figure img{
+.pic{
     border: hsla(231, 70%, 5%, 0.384) solid 2px;
     width: 100%;
     border-radius: 15px;
 }
-figcaption{
+.photo__figuree--caption{
     padding-left: 10px;
     background-color: hsla(231, 70%, 5%, 0.384);
     padding: 20px;
@@ -78,37 +75,43 @@ figcaption{
     transition: all 0.5s ease 0s;
     box-shadow: 5px 2px 3px rgba(255, 255, 255, 0.459);
 }
-@media (min-width:460px) and (max-width:1015px){
+@media (min-width:641px) and (max-width:1015px){
     .Gallery{
-        width: 40%;
-
+        width: 60%;
+        font-size: 34px;
     }
-    figcaption{
+    .photo{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .photo__figuree--caption{
         font-size: 15px;
     }
     .next{
         font-size: 20px;
     }
 }
-@media  (max-width:450px){
+@media  (max-width:645px){
     .Gallery{
-        width: 80%;
-        font-size: 2rem;
+        width: 60%;
+        font-size: 1.5rem;
     }
     .photo{
         grid-template-columns: 1fr;
         grid-gap: 45px;
+        margin-top: 0;
     }
-    figcaption{
+    .photo__figuree--caption{
         font-size: 16px;
         margin-top: 3px;
     }
-    p{
+    .next__para{
         font-size: 20px;
         padding: 5px;
         text-align: center;
     }
-    h3.next-title {
+    .next-title {
       
         margin: 5px;
         font-size: 1.1em;
