--- a/css/video_gallery.css
+++ b/css/video_gallery.css
@@ -23,18 +23,25 @@ background-color: aqua;}
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
-.video_gallery__item p{
-    color: whitesmoke;
-    border: 4px solid rgb(28, 44, 48);
-    padding-left: 1rem;
-    background-color: rgb(21, 26, 25);
-    border-radius: 12px;
+.gallery--item-des{
+    padding-left: 10px;
+    background-color: hsla(231, 70%, 5%, 0.384);
+    padding: 20px;
+    border-radius: 15px;
+    color: white;
+    letter-spacing: 0.9px;
+    line-height: 1.3em;
+    font-size: 18px;
+    word-spacing: 2px;
+    
+   
+  
     margin-bottom: 2rem;
     margin-top: -10px;
     margin-left: 15px;
-    font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 0.4px;
+   
+    font-family: 'Times New Roman', Times, serif;
+    
 }
 video{
    width: 100%;
@@ -45,7 +52,7 @@ video{
 }
 .description{
     color: white;
-    margin-top: 5em;
+   
     margin-left: 12rem;
     margin-right: 12rem;
     border-radius: 10px;
@@ -58,24 +65,6 @@ video{
     letter-spacing: 1px;
 }
 
-/* .title{
-    color: white;
-   
-    text-align: center;
-    width: 50%;
-    padding-top: 10px;
-    height: 150px;
-    border: 2px solid hsla(231, 70%, 5%, 0.384) ;
-    font-size: 6rem;
-    margin-top: 50px;
-    background-color: hsla(231, 70%, 5%, 0.384)  ;
-    margin: 100px;
-    border-radius: 15px;
-    margin-left: 350px;
-    margin-bottom: -80px;
-    
-
-} */
 .title{
     display: inline-flexbox;
     text-align: center;
@@ -101,17 +90,51 @@ video{
     grid-column: span 1;
 }
 
+@media (min-width:600px) and (max-width:1000px){
+    .description{
+        margin: 0;
+        width: 100%;
+    }
+    .title{
+        margin: auto;
+        width: 50%;
+        font-size: 2.1em;
+        margin-top: 15px
+        ;
+    }
+    .gallery--item-des{
+        font-size: 15px;
+        width: 90%;
+    }
+}
 
+@media (max-width:600px) {
 
-@media (max-width:360px) {
-    body{
+    .description{
+        margin: 19px;
+        width: 90%;
         font-size: 10px;
     }
-    header{
-        flex-direction: column;
+    .description--para{
+        font-size: 17px;
     }
-    footer{
-        flex-direction: column;
+    .video_gallery{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .gallery--item-des{
+        font-size: 15px;
+    }
+    .title{
+        width: 70%;
+        font-size: 1.7em;
     }
     
+}
+
+@media (max-width:411px) {
+    
+    .description--para{
+        font-size: 13px;
+    }
 }
